# supplies_contracts

./: .pre-commit-config.yaml  README.md  beneficiaries_info_mode.json  generate.py  package.json  pyproject.toml  tax_types.json
src/supplies_contracts/: __init__.py  _choices.py  beneficiaries_info_mode.py  tax_types.py
