[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplies-contracts"
version = "0.1.0"
description = "Shared contracts for Python and JavaScript/TypeScript clients"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "S.Pro Team" }
]
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = [
  "pre-commit",
  "absolufy-imports",
  "ruff",
  "autoflake",
  "black",
  "isort",
  "typos",
  "vulture",
  "yamllint",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supplies_contracts = ["py.typed"]

[tool.ruff]
target-version = "py313"
fix = true
line-length = 120
lint.select = [
  "F",
  "E",
  "W",
  "UP",
  "C90",
  "N",
  "C4",
  "B",
  "T20",
  "Q",
]
exclude = [
  "eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".tox",
  ".venv",
  ".pyc",
  ".pyi",
  "_build",
  "buck-out",
  "build",
  "dist",
]
lint.ignore = ["N815"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
expand-star-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.pyc
  |\.pyi
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
profile = "black"
src_paths = ["src"]

[tool.vulture]
exclude = [
  "*/migrations/*.py",
  "*/.venv/*",
  "*/venv/*",
]
ignore_names = []
sort_by_size = true
min_confidence = 80
